--- a/app/src/main/res/layout/activity_existedgame.xml
+++ b/app/src/main/res/layout/activity_existedgame.xml
@@ -81,7 +81,7 @@
         android:ems="10"
         android:inputType="number"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/searching"
@@ -99,7 +99,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/enter_the_code_of_a_valid_game"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Code_number"
@@ -129,7 +129,7 @@
         android:text="@string/searching_the_game"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="invisible"
