--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -91,7 +91,7 @@
         android:layout_height="0dp"
         android:text=""
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor= "?android:textColorPrimary"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/single_player"
