--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -99,7 +99,7 @@
         android:layout_height="0dp"
         android:text="@string/username"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline_leaderboard_6"
@@ -114,7 +114,7 @@
         android:text="@string/score"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline_leaderboard_6"
@@ -129,7 +129,7 @@
         android:text="@string/wins"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline_leaderboard_6"
