--- a/app/src/main/res/layout/activity_newgame.xml
+++ b/app/src/main/res/layout/activity_newgame.xml
@@ -12,7 +12,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/share_this_code_with_your_friend"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/number"
@@ -78,7 +78,7 @@
         android:ems="10"
         android:inputType="number"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
@@ -96,7 +96,7 @@
         android:text="@string/_1_2_players"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline_newGame_5"
