--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="?background"
     android:padding="24dp">
 
     <ImageView
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.676"
         app:srcCompat="?android:attr/textCheckMark"
-        app:tint="@color/black" />
+        app:tint="?android:textColorPrimary" />
 
     <ImageView
         android:id="@+id/check1"
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.38"
         app:srcCompat="?android:attr/textCheckMark"
-        app:tint="@color/black" />
+        app:tint="?android:textColorPrimary" />
 
     <EditText
         android:id="@+id/old_password"
@@ -48,6 +48,7 @@
         android:hint="@string/old_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColor= "?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -65,6 +66,7 @@
         android:hint="@string/new_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColor= "?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -82,6 +84,7 @@
         android:hint="@string/confirm_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColor= "?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -107,6 +110,7 @@
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor= "?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
