--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/account"
-        android:icon="@drawable/account"
+        android:icon="?android:icon"
         app:showAsAction="always"
         android:title="@string/account" />
 </menu>
