--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,30 +1,18 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!--
-    <style name="Theme.Larble" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-    </style>-->
-
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Larble" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_color</item>
-        <item name="colorPrimaryVariant">@color/grey1</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/yellow2</item>
         <item name="colorSecondaryVariant">@color/light_blue1</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:icon">@drawable/account</item>
+        <item name="background">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/grey1</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
