--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline_leaderboard"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="?logo" />
 
 
     <androidx.constraintlayout.widget.Guideline
