--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline_main_2"
         app:layout_constraintStart_toStartOf="@id/guideline_main"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="?logo" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_main"
