--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline_menu"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="?logo" />
 
 
     <androidx.constraintlayout.widget.Guideline
