--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline_newGame"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="?logo" />
 
 
     <androidx.constraintlayout.widget.Guideline
