--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline_signup"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="?logo" />
 
 
     <androidx.constraintlayout.widget.Guideline
