--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,5 +15,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/grey1</item>
         <!-- Customize your theme here. -->
+        <item name="logo">@drawable/logo_dark</item>
     </style>
 </resources>
