[INIT] game over activity

--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -69,6 +69,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/medium"
+        android:enabled="false"
+        android:clickable="false"
         app:layout_constraintBottom_toTopOf="@+id/hard"
         app:layout_constraintDimensionRatio="2.9:1"
         app:layout_constraintEnd_toEndOf="@id/guideline_singlePlayer_4"
@@ -81,6 +83,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/hard"
+        android:enabled="false"
+        android:clickable="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline_singlePlayer_5"
         app:layout_constraintDimensionRatio="2.9:1"
         app:layout_constraintEnd_toEndOf="@id/guideline_singlePlayer_4"
