--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,13 +34,6 @@
         app:layout_constraintGuide_percent="0.3" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_login_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9" />
-
-    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_login_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,6 +53,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.6" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.35" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.65" />
 
 
     <EditText
@@ -98,42 +105,44 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/login"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/sign_up"
-        app:layout_constraintEnd_toEndOf="@id/guideline_login_5"
+        app:layout_constraintDimensionRatio="2.5:1.4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_8"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintDimensionRatio="2:1.4"
-        app:layout_constraintStart_toStartOf="@id/guideline_login_4"
-        app:layout_constraintTop_toBottomOf="@id/guideline_login_6" />
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_7"
+        app:layout_constraintTop_toTopOf="@+id/guideline_login_6" />
 
     <Button
         android:id="@+id/sign_up"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/sign_up"
         app:iconTint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_login_3"
-        app:layout_constraintDimensionRatio="2:1.4"
-        app:layout_constraintEnd_toEndOf="@id/guideline_login_5"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/google_btn"
+        app:layout_constraintDimensionRatio="2.5:1.4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_8"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@id/guideline_login_4"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_7"
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <Button
         android:id="@+id/google_btn"
-        android:layout_width="165dp"
-        android:layout_height="57dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="@string/google_login"
         app:iconTint="#FFFFFF"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="2:1.4"
-        app:layout_constraintEnd_toEndOf="@id/guideline_login_5"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="@id/guideline_login_4"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintDimensionRatio="2.5:1.5"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_8"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_7"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
