--- a/app/src/main/res/layout/card_view_leaderboard.xml
+++ b/app/src/main/res/layout/card_view_leaderboard.xml
@@ -26,18 +26,26 @@
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
             app:srcCompat="?android:icon" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.53" />
+
         <TextView
             android:id="@+id/username"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text=""
             android:textColor="?android:textColorPrimary"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:paddingStart="5dp"
-            android:paddingEnd="0dp"
+            android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="5.2:1"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_card"
             app:layout_constraintStart_toEndOf="@id/photo"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,7 +62,7 @@
             app:layout_constraintDimensionRatio="2.2:1"
             app:layout_constraintEnd_toStartOf="@+id/score"
             app:layout_constraintHorizontal_bias="0.487"
-            app:layout_constraintStart_toEndOf="@+id/username"
+            app:layout_constraintStart_toStartOf="@+id/guideline_card"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
